--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@
 
 
 # Connection url for the database "Local MySQL"
-spring.datasource.url = jdbc:mysql://localhost:3306/lecture_jpa_db?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Europe/Berlin
+spring.datasource.url = jdbc:mysql://localhost:3306/library_management_db?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Europe/Berlin
 # Username and password
 spring.datasource.username = root
 spring.datasource.password = 541988
